# corectl

./: .project  __main__.py  corectl.epj  cpuconf.epj  pyDictatorQt.py  pyproject.toml  tblCores.py
.eric7project/: cpuconf.eqj  cpuconf.esj  cpuconf.etj  project-apis.db
.jedi/: project.json
func/: file.py  msr.py  pkg_liccpy.py
iface/cli/: cli.py  clo.py
iface/cli/msr/: msr.py
iface/qt5/: 1untitled.ui  Main.py  Main.ui  PkgCores.py  PkgTree.py  cpuface.py  frmPkgCores.py  frmPkgCores.ui  frm_tbl-PkgCores.py  frm_tbl-PkgCores.ui  frm_tblPkgCores.py  main.py  qt5dictator.py  qtdict.py  qtdict.ui  qtdictctl.py  qtdictfb.py  qtdictfb.ui  tblcores.py  test.py  tmpfile.py  wgtPkgTree.py  wgtPkgTree.ui
iface/qt5/old/: Main.py  Main.ui  __init__.py  cpuface.py  main.py  tblCores.py
iface/qt6/: Main.py  main.py  tblCores.py
iface/qt6/old/: Main.py  Main.ui  __init__.py  tblCores.ui  tblcores.py
mod/cpuid/: cpu.py  cpu.txt  cpuid.py
mod/gov/: perf.py
mod/msr/: flags.py  msr.py
mod/polkit/: polkit.py
mod/prof/: __init__.py  perf.py
mod/su/: su.py
