[tool.poetry]
name = "corectl"
version = "0.1.0"
description = ""
authors = ["Hoefkens Jeroen <hoefkens.j@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sourcery = "^1.2.7"
py-cpuinfo = "^8.0.0"
click = "^8.1.3"
psutil = "^5.9.1"
PyQt5 = "^5.15.7"
PyQt6 = "^6.3.1"
pyqt6-forms = "^0.3.0"
pyqt6-utils = "^0.5.0"
PyQt5-Qt5 = "^5.15.2"
pyqt5extras = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
